# transmutation

./: .clippy.toml  .cursorrules  .dockerignore  .gitignore  .rulebook  AGENTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  COMPARISON_ML_ONNX.md  COMPARISON_SUMMARY.txt  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.build-libs  Dockerfile.build-libs-arm  FINAL_IMPLEMENTATION_STATUS.md  FINAL_TEST_RESULTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PROGRESS.md  PROGRESS_SUMMARY.md  README.md  RETRIEVAL_IMPACT_ANALYSIS.md  STATUS.md  analyze_diff.py  build-libs-all.ps1  build-msi.ps1  build-stub-windows.ps1  build.rs  build_cpp.sh  clippy.toml  compare_detailed.py  compare_docling.py  compare_modes.py  debug_blocks.rs  detailed_diff.py  docling_parse  docling_per_page.py  (+7 more)
.cargo/: config.toml
.claude/: settings.local.json
.cursor/commands/: rulebook-task-apply.md  rulebook-task-archive.md  rulebook-task-create.md  rulebook-task-list.md  rulebook-task-show.md  rulebook-task-validate.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-ffi.yml  ci.yml  codespell.yml  release-artifacts.yml  release.yml  rust-lint.yml  rust-test.yml  rust.yml
benches/: conversion_benchmarks.rs  pipeline_benchmark.rs
cpp/: CMakeLists.txt  CMakeLists_full.txt  CMakeLists_minimal.txt  docling_ffi.cpp  docling_ffi.h  docling_ffi_stub.cpp
data/: 1706.03762v7_docling.md  1706.03762v7_ml_onnx.md  1706.03762v7_ml_onnx_clean.md  1706.03762v7_page_1.md  1706.03762v7_page_10.md  1706.03762v7_page_14.md  1706.03762v7_page_15.md  1706.03762v7_page_2.md  1706.03762v7_page_3.md  1706.03762v7_page_5.md  1706.03762v7_page_6.md  1706.03762v7_page_7.md  1706.03762v7_page_8.md  1706.03762v7_transmutation.md  2506.10943v2_docling.md  2506.10943v2_page_12.md  2506.10943v2_page_14.md  2506.10943v2_page_18.md  2506.10943v2_page_19.md  2506.10943v2_page_2.md  2506.10943v2_page_21.md  2506.10943v2_page_3.md  2506.10943v2_page_6.md  2506.10943v2_page_7.md  2506.10943v2_page_8.md  2506.10943v2_page_9.md  2506.10943v2_transmutation.md  2506.10943v2_transmutation_precision.md  BENCHMARK_REPORT.md  benchmark_results.csv  output_ffi_test.md  test_CELL_BASED.md  test_FINAL_RUST_DOCLING.md  test_IMPROVED.md  test_NEW_SYSTEM.md  test_PRECISE_SPACING.md  test_WITH_SPACES.md
data/papers_converted/: 1801.06146_ulmfit.md  1802.05365_elmo.md  1810.04805_bert.md  1906.08237_xlnet.md  1909.05025_local_local_attention.md  1909.08053_megatron.md  1909.11942_albert.md  1910.10683_t5.md  2001.04451_reformer.md  2004.04906_dpr.md  2004.05150_longformer.md  2005.00247_adapter_adapter_fusion.md  2005.11401_rag.md  2005.14165_gpt3.md  2006.11239_ddpm.md  2006.16668_gshard.md  2007.14062_bigbird.md  2009.03300_mmlu.md  2101.03961_switch_switch_transformer.md  2102.12092_dalle.md  2103.00020_clip.md  2105.05233_guided_guided_diffusion.md  2106.09685_lora.md  2112.09118_contriever.md  2112.10752_stable_stable_diffusion.md  2201.11903_chain_of_chain_of_thought.md  2203.02155_instructgpt.md  2203.11171_self_self_consistency.md  2203.15556_chinchilla.md  2204.02311_palm.md  2204.03458_video_video_diffusion.md  2205.05131_ul2.md  2205.11487_imagen.md  2205.14135_flash_flash_attention.md  2206.04615_bigbench.md  2206.10789_parti.md  2208.07339_llm_llm_int8.md  2209.00796_diffusion_diffusion_survey.md  2209.03003_rectified_rectified_flow.md  2210.03629_react.md  (+52 more)
data/split_attention/: attention_11.md  attention_12.md  attention_13.md  attention_4.md  attention_9.md
data/split_paper2/: paper2_10.md  paper2_11.md  paper2_13.md  paper2_15.md  paper2_16.md  paper2_17.md  paper2_20.md  paper2_22.md  paper2_23.md  paper2_24.md  paper2_25.md  paper2_4.md  paper2_5.md
debian/: postinst  postrm  prerm
docs/: ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_COMPARISON.md  BENCHMARK_RESULTS.md  CLI_GUIDE.md  DEPENDENCIES.md  DOCLING_INTEGRATION.md  FEATURES_COMPLETE.md  FFI.md  INTEGRATION_SUMMARY.md  ML_ACTIVATION_GUIDE.md  MSI_BUILD.md  MSI_DEPENDENCIES.md  PLANNING.md  QUALITY_COMPARISON.md  README.md  README_COMPLETE_IMPLEMENTATION.md  ROADMAP.md  SETUP.md  STATUS.md
examples/: README.md  advanced_options.rs  basic_conversion.rs  batch_processing.rs  batch_test.rs  debug_extract.rs  debug_lopdf_pages.rs  debug_text_blocks.rs  pdf_conversion.rs  test_convert.rs  test_features.rs  test_ffi.rs  test_pdf_extract.rs
install/: README.md  install-deps-linux.sh  install-deps-macos.sh  install-deps-windows-manual.bat  install-deps-windows.bat  install-deps-windows.ps1
models/: layout_model.json
pkg/appimage/: AppRun.sh  transmutation.desktop
rulebook/: AGENT_AUTOMATION.md  GIT.md  OPENSPEC.md  QUALITY_ENFORCEMENT.md  RULEBOOK.md  RUST.md
scripts/: README.md  README_MODEL_EXPORT.md  benchmark_all_papers.sh  build-libs-all.sh  build-libs-docker.ps1  build-libs-docker.sh  build-msi.ps1  build_cpp.ps1  build_cpp.sh  convert_pytorch_to_onnx.py  convert_safetensors_to_onnx.py  download_alternative_onnx_models.py  download_models.py  download_onnx_models.sh  download_papers.sh  download_real_models.py  export_docling_to_onnx_real.py  export_layout_model_onnx.py  export_onnx_models.py  export_tableformer_onnx.py  find-large-files.sh  search_onnx_models.py  test_docling_models.py
src/: batch.rs  error.rs  lib.rs  types.rs
src/converters/: archive.rs  audio.rs  csv.rs  docx.rs  html.rs  image.rs  mod.rs  odt.rs  pdf.rs  pptx.rs  rtf.rs  traits.rs  txt.rs  video.rs  xlsx.rs  xml.rs
src/document/: hierarchy_builder.rs  mod.rs  page_assembler.rs  parser.rs  serializer.rs  text_utils.rs  types.rs  types_extended.rs
src/engines/: docling_json_parser.rs  docling_ml.rs  docling_parse_ffi.rs  docling_python_bridge.rs  layout_analyzer.rs  layout_postprocessor.rs  mod.rs  pdf_parser.rs  rule_based_layout.rs  table_detector.rs
src/integration/: mod.rs
src/ml/: cell_matching.rs  layout_model.rs  mod.rs  (+4 more)
tests/: pdf_tests.rs  pipeline_integration_test.rs
wix/: License.rtf  README.md  install-deps-embedded.ps1  main-advanced.wxs  main.wxs
(+12 files in other folders)
